force-app/main/default/objects/Creditor__c/Creditor__c.object-meta.xml
<CustomObject>
    <label>Creditor</label>
    <pluralLabel>Creditors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Creditor Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>