force-app/main/default/objects/Creditor__c/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <label>Debt</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>