force-app/main/default/objects/Creditor__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>