force-app/main/default/objects/Creditor__c/fields/Was_paid__c.field-meta.xml
<CustomField>
    <fullName>Was_paid__c</fullName>
    <label>Was paid</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>